@@ -33,7 +33,6 @@ th{
 }
 
 table{
-	width: 100%;
 	text-align: left;
 	margin-left: auto;
 	margin-right: auto;
